# cerberus

./: .bandit  .cursorignore  .gitignore  .pre-commit-config.yaml  Justfile  README.md  default.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  data_generation.yml  data_generation_ci.yml  eda.yml  release.yml
algorithms/common/: pyproject.toml
algorithms/heuristics/: Dockerfile  README.md  pyproject.toml  setup.py  test_config.py
algorithms/heuristics/configs/: config.yaml
algorithms/heuristics/src/: __init__.py  config.py  main.py  rules_engine.py
algorithms/heuristics/tests/: __init__.py
algorithms/llm_guardrail/: Dockerfile  pyproject.toml
algorithms/ml_model/: Dockerfile  pyproject.toml
common/: README.md  __init__.py  pyproject.toml
common/utils/: __init__.py  timing.py
data_generation/: .env.example  Justfile  README.md  TESTING_PLAN.md  annotate.py  dataset_preprocess.py  deduplicate.py  evaluate.py  generate.py  main.py  open_router_embedding_model.py  open_router_llm.py  openrouter_deepeval_llm.py  openrouter_distilabel_llm.py  pyproject.toml  safe_contexts.txt  test_main.py  unsafe_contexts.txt  v1_safe_contexts.txt  v1_unsafe_contexts.txt  v2_safe_contexts.txt  v2_unsafe_contexts.txt
data_generation/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt
data_generation/data/: metadata_b97ad7dbb16c43a5963a099023f34901.json  synthetic_1.jsonl  synthetic_10.jsonl  synthetic_94a0c051ff8844f78e4deeb263c4241a.jsonl  v0_synthetic_10.jsonl  v0_synthetic_10_judged.jsonl  v1_synthetic_1000.jsonl  v2_synthetic_1000.jsonl  v2_synthetic_1000_deduplicated.jsonl  v2_synthetic_1000_deduplicated_judged.jsonl  v2_synthetic_1000_deduplicated_judged_full_dataset.jsonl  v2_synthetic_1000_deduplication_metrics.json  v2_synthetic_1000_judged.jsonl  v2_synthetic_10_judged.jsonl
data_generation/data/v2_synthetic_1000_deduplicated_judged_misclassified_prompts_annotated/: records.json
data_generation/data/v2_synthetic_1000_deduplicated_judged_misclassified_prompts_annotated/.argilla/: dataset.json  settings.json
data_generation/data/v2_synthetic_1000_judged_misclassified_prompts_annotated/: records.json
data_generation/data/v2_synthetic_1000_judged_misclassified_prompts_annotated/.argilla/: dataset.json  settings.json
data_generation/src/data_generation/: evaluate.py  generate.py  main.py  openrouter_deepeval_llm.py
data_generation/tests/: conftest.py  test_dataset_preprocess.py  test_deduplicate.py  test_generate.py  test_main.py
data_generation/tests/data/: sample_deduplicate.jsonl
data_generation/tests/mocks/: semhash_responses.py
data_generation/utils/: evaluate.py  models.py  prompt.py
eda/: EDA.py  Justfile  eda.html  pyproject.toml
evaluation/: pyproject.toml
shared/: pyproject.toml  pyproject.toml.template
tasks/: prd-llm-input-guardrails.md  tasks-prd-llm-input-guardrails.md
