[project]
name = "data-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.0.2",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "openai>=1.82.1",
    "outlines>=0.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "typer>=0.16.0",
]
