[project]
name = "data-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "deepeval>=3.0.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "loguru>=0.7.3",
    "openai>=1.82.1",
    "outlines>=0.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "tiktoken>=0.9.0",
    "typer>=0.16.0",
]
