[project]
name = "data-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.12",
    "deepeval>=3.0.2",
    "distilabel[instructor,outlines]>=1.5.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "loguru>=0.7.3",
    "openai>=1.82.1",
    "outlines>=0.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "typer>=0.16.0",
]
