[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "ipython>=9.3.0",
    "llvmlite>=0.44.0",
    "marimo>=0.13.15",
    "ruff>=0.11.13",
    "sentence-transformers>=4.1.0",
]
