[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "ipython>=9.3.0",
    "llvmlite>=0.44.0",
    "marimo[lsp]>=0.13.15",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandoc>=2.4",
    "ruff>=0.11.13",
    "sentence-transformers>=4.1.0",
]

[tool.marimo.language_servers.pylsp]
enabled = true               # Enable/disable the Python language server
enable_ruff = true           # Linting with ruff (enabled by default, if installed)

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
ignore = ["F401"]
