[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "1.0.0"
description = "Shared models and utilities for LLM Guardrails services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common", "common.*"]